--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Contacts</string>
     <string name="activity_add_label">Add contact</string>
+    <string name="action_search">Search contacts</string>
 </resources>
