--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Contacts</string>
     <string name="activity_add_label">Add contact</string>
     <string name="action_search">Search contacts</string>
+    <string name="button_edit">Edit</string>
+
 </resources>
